--- a/marina/index.html
+++ b/marina/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant: Gereciando máquinas virtuais</li>
         <li>Docker: Criando containers sem dor de cabeça</li>
-        <li>Ansible: Infraestrutura como código</li>
+        <li>Ansible</li>
         <li>Integração Contínua: maturidade e produtividade no desenvolvimento de software</li>
     </ul>
 </body>
